# EDPBilling_FIle_Upload

./: .env  .env.example  .gitignore  CONTEXT.md  README.md  edp  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/clients/: cbos_client.py  dp_upload_client.py
app/config/: optional_slots.yaml
app/core/: config.py  correlation.py  database.py  logging.py  queue.py
app/models/: __init__.py  batch.py  settlement_upload.py  uploaded_file.py
app/repositories/: batch_repository.py  settlement_upload_repository.py  uploaded_file_repository.py
app/scheduler/: scheduler.py
app/schemas/: settlement.py
app/services/: batch_service.py  file_service.py  manifest_service.py  optional_slots.py  settlement_service.py  upload_matching.py  upload_outcome.py  upload_service.py
app/workers/: upload_worker.py
docs/: BATCH_HANDOFF_CONTRACT.md  CBOS_HANDOFF_CONTRACT.md  Call with Dawood and 1 other.docx  EDPFILEUPLOADSETTING (1).xlsx  EDPFILEUPLOADSETTING.xlsx  EDP_RequiredFiles.xlsx  EDP_Trade_Process_API_Documentation_V5.docx  EDP_Trade_Process_API_Documentation_V6.docx  EDP_Trade_Process_API_Documentation_v4.docx
docs/postman/: EDP_CBOS_Local_Mock.postman_environment.json  EDP_CBOS_MCX_FullBatch.postman_collection.json  EDP_CBOS_UAT.postman_environment.json  EDP_Trade_Process_API_v4.postman_collection.json  (+2 more)
mock_cbos/: README.md  app.py  data.py  state.py
scripts/: e2e_upload.py
tests/: conftest.py  test_batch_queue.py  test_batches_api.py  test_cbos_client_mock.py  test_chunk_wire.py  test_config_and_singletons.py  test_dp_upload_client_mock.py  test_e2e_upload_flow.py  test_logging_trace.py  test_mock_cbos_v5.py  test_real_cbos_payloads.py  test_secrets.py  test_settlements_api.py  test_upload_matching.py  test_upload_outcome.py  test_upload_robustness.py
(+4 files in other folders)
